syntax = "proto3";

package base.operate;

import "base.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.github.churunfa.switchautoweb.base.operate";
option java_outer_classname = "BaseOperateProto";

service BaseOperateService {
    rpc GetAllBaseOperates (google.protobuf.Empty) returns (GetAllBaseOperatesResponse) {}
    rpc ExecBaseOperate (ExecBaseOperateRequest) returns (SimpleResponse){}
}

message BaseOperate {
    int32 id = 1;
    string ename = 2;
    string name = 3;
    int32 param_size = 4;
    string param_names = 5;
    string init_params = 6;
    int32 min_exec_time = 7;
    int32 min_reset_time = 8;
    bool need_reset = 9;
}

message GetAllBaseOperatesResponse {
    repeated BaseOperate operates = 1;
}

message ExecBaseOperateRequest {
    int32 id = 1;
    bool reset = 2;
    string params = 3;
}